--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,11 +1,11 @@
-@mixin tablet-view {
+@mixin tablet{
 	@media screen and (min-width: 48rem) {
 		@content;
 	}
 }
 
-@mixin desktop-view {
-	@media screen and (min-width: 90rem) {
+@mixin desktop{
+	@media screen and (min-width: 64rem) {
 		@content;
 	}
 }
